tests/ui/coroutine/auto-trait-regions.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/auto-trait-regions.rs:45:24
   |
LL |         let a = A(&mut true, &mut true, No);
   |                        ^^^^                - temporary value is freed at the end of this statement
   |                        |
   |                        creates a temporary value which is freed while still in use
...
LL |         assert_foo(a);
   |                    - borrow later used here
   |
help: consider using a `let` binding to create a longer lived value
   |
LL ~         let mut binding = true;
LL ~         let a = A(&mut binding, &mut true, No);
   |

error[E0716]: temporary value dropped while borrowed
  --> $DIR/auto-trait-regions.rs:45:35
   |
LL |         let a = A(&mut true, &mut true, No);
   |                                   ^^^^     - temporary value is freed at the end of this statement
   |                                   |
   |                                   creates a temporary value which is freed while still in use
...
LL |         assert_foo(a);
   |                    - borrow later used here
   |
help: consider using a `let` binding to create a longer lived value
   |
LL ~         let mut binding = true;
LL ~         let a = A(&mut true, &mut binding, No);
   |

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:31:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `&'0 OnlyFooIfStaticRef` must implement `Foo`, for any lifetime `'0`...
   = note: ...but `Foo` is actually implemented for the type `&'static OnlyFooIfStaticRef`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:51:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `Foo` would have to be implemented for the type `A<'0, '1>`, for any two lifetimes `'0` and `'1`...
   = note: ...but `Foo` is actually implemented for the type `A<'_, '2>`, for some specific lifetime `'2`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0716`.
